tests/routing/netpol/routing.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: netpol-routing
spec:
  hostname: example.com
  routes:
    - pathPrefix: /app1
      targetApp: netpol-app-1
    - pathPrefix: /app2
      targetApp: netpol-app-2
