tests/routing/netpol/netpol-assert.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-app-1-istio-route
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateways
          podSelector:
            matchLabels:
              app: istio-ingress-external
      ports:
        - port: 8081
          protocol: TCP
  podSelector:
    matchLabels:
      app: netpol-app-1
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-app-2-istio-route
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-gateways
          podSelector:
            matchLabels:
              app: istio-ingress-external
      ports:
        - port: 9000
          protocol: TCP
  podSelector:
    matchLabels:
      app: netpol-app-2
  policyTypes:
    - Ingress
