tests/routing/netpol/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: netpol
spec:
  skip: false
  concurrent: true
  skipDelete: false
  steps:
    - try:
        - apply:
            file: application.yaml
        - assert:
            file: netpol-assert.yaml
